--- a/index2.html
+++ b/index2.html
@@ -3,9 +3,9 @@
 <head>
 <meta charset="utf-8">
 <title>Aplic. Web de jQuery Mobile</title>
-<link href="jquery-mobile/jquery.mobile-1.0.min.css" rel="stylesheet" type="text/css"/>
+<link href="jquery-mobile/css/jquery.mobile-1.3.2.css" rel="stylesheet" type="text/css"/>
 <script src="jquery-mobile/jquery-1.6.4.min.js" type="text/javascript"></script>
-<script src="jquery-mobile/jquery.mobile-1.0.min.js" type="text/javascript"></script>
+<script src="jquery-mobile/js/jquery.mobile-1.3.2.js" type="text/javascript"></script>
 <script>
 	//$(document).on( "pageinit", "#prueba", function(){
 		$(document).on( "swipeleft swiperight", "#prueba",function(e){
