--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@ $(function ()
                if(jqXHR.status&&jqXHR.status==400){
                     alert(jqXHR.responseText); 
                }else{
-                   alert("Something went wrong   "+jqXHR.status + "      " + errorThrown);
+                   alert("Something went wrong   "+jqXHR.status + "   //   " + errorThrown);
                }
 			}
         });
