--- a/index.html
+++ b/index.html
@@ -2079,8 +2079,8 @@ function detallesCesta(objeto){
     <div data-role="panel" id="defaultpanel" style="background: #000; color: #FFF; text-shadow: 0px 0px 0px rgb(0, 0, 0)">
     	<h1>DrinkBo</h1>
         <h3>Aplicación de administración de tu local, con la que podrás realizar tus pedidos desde el móvil y ver/cambiar el estado de los mismos.</h3>
-        <img id="imgUsuarioH" src="img/Hombre.png"></img>
-        <img id="imgUsuarioM" src="img/Hombre.png"></img>
+        <img id="imgUsuarioH" src="http://www.drinkbo.com/img/hombre.png"></img>
+        <img id="imgUsuarioM" src="http://www.drinkbo.com/img/mujer.png"></img>
         <h5><span id="usuarioMail"></span></h5>
         <div style="float: left">
         	<h5>
